--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="add_meeting_date_picker">01/01/2020</string>
     <string name="add_meeting_timepicker">08:00</string>
     <string name="add_meeting_validate_button">VALIDER</string>
+    <string name="add_meeting_time">HEURE</string>
 </resources>
