Commit : fix CreateMeetingActivity methode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="hyphen">-</string>
     <string name="delete_button">delete_button</string>
     <string name="resetFilter">Défiltrer</string>
+    <string name="Erreur_email">Reseignez un email valide</string>
 
 </resources>
